@@ -16,6 +16,7 @@
     settings.c:1930: (style) Clarify expression with parentheses #659
     fix segfault in ptk/ptk-dir-tree.c:430  #698
     fix newly imported file handlers appear in Plugins menu #688
+    fix 1.0.2 708f0988 regression: Dbl-click to enter dir selects file #702
 1.0.5   2016-01-20:
     recreate too small cached thumbnails #584
     read $XDG_TEMPLATES_DIR via glib for user-dirs.dirs support #581
